--- a/mail/public/templates/password-reset.hbs
+++ b/mail/public/templates/password-reset.hbs
@@ -72,7 +72,7 @@
           src="https://images.pexels.com/photos/3941855/pexels-photo-3941855.jpeg?auto=compress&cs=tinysrgb&w=1600"
           alt="Logo"
         />
-        <h2 class="title">Email Verification</h2>
+        <h2 class="title">Password Reset</h2>
       </div>
 
       <div class="content">
@@ -84,7 +84,7 @@
       </div>
 
       <div class="btn-container">
-        <a href="{{updateLink}}" class="btn">Verify Email Address</a>
+        <a href="{{updateLink}}" class="btn">Reset Password</a>
       </div>
 
       <hr />
