--- a/mail/public/templates/verification.hbs
+++ b/mail/public/templates/verification.hbs
@@ -37,7 +37,7 @@
         margin-top: 10px;
       }
       .content {
-        text-align: left;
+        text-align: center;
         margin-bottom: 30px;
       }
       .btn {
